# synote

./: .gitignore  CHANGELOG.md  LICENSE  PROGRESS.md  README.md  config.toml  project.md  run.sh
backend/: .gitignore  Cargo.toml
backend/src/: config.rs  main.rs
backend/src/api/: notes.rs
backend/src/models/: mod.rs  note.rs
backend/src/search/: mod.rs
backend/src/services/: mod.rs
backend/src/storage/: mod.rs
backend/tests/: integration_test.rs
docker/: Dockerfile  docker-compose.yml
docs/: GETTING_STARTED.md
frontend/public/: index.html
